theme: fix shifting when first load

--- a/app/design/frontend/MAP/custom/web/css/source/_navigation.less
+++ b/app/design/frontend/MAP/custom/web/css/source/_navigation.less
@@ -327,9 +327,8 @@
         }
 
         .level0 {
-            display: flex;
+            text-align: center;
             flex: 1 1 auto;
-            justify-content: center;
             
             > .level-top {
                 .lib-css(color, @color-white);
@@ -337,6 +336,11 @@
                 &:hover{
                     .lib-css(color, @color-white);
                 }
+
+            }
+
+            > .submenu{
+                text-align: left;
             }
 
             &.active,
